<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?android:attr/dialogPreferredPadding"
    android:background="@color/dialog_background">

    <TextView
        android:layout_marginBottom="?android:attr/dialogPreferredPadding"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/menu"
        android:fontFamily="@font/consolas"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:backgroundTint="@color/appcompat_button"
            android:textColor="@color/white"
            android:id="@+id/open_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/open_file"
            android:textSize="18sp"
            android:fontFamily="@font/consolas" />

        <androidx.appcompat.widget.AppCompatButton
            android:backgroundTint="@color/appcompat_button"
            android:textColor="@color/white"
            android:id="@+id/new_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/new_file"
            android:fontFamily="@font/consolas"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="@color/appcompat_button"
        android:textColor="@color/white"
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/about"
        android:fontFamily="@font/consolas"
        android:textSize="18sp" />

</LinearLayout>