<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?android:attr/dialogPreferredPadding"
    android:background="@color/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="?android:attr/dialogPreferredPadding"
        android:paddingEnd="?android:attr/dialogPreferredPadding"
        android:orientation="vertical" >

        <TextView
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/generate"
            android:fontFamily="@font/consolas"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <RadioGroup
            android:layout_marginBottom="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:buttonTint="@color/blue"
                android:textColor="@color/white"
                android:id="@+id/array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/array"
                android:fontFamily="@font/consolas"/>

            <View
                android:layout_width="70dp"
                android:layout_height="0dp" />

            <RadioButton
                android:buttonTint="@color/blue"
                android:textColor="@color/white"
                android:id="@+id/object"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/object"
                android:fontFamily="@font/consolas"/>

        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_and_choose"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel_and_choose"
            android:fontFamily="@font/consolas"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dialog_text"/>

        <TextView
            android:id="@+id/done"
            android:background="@drawable/dialog_done_ripple"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/done"
            android:fontFamily="@font/consolas"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>