<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?android:attr/dialogPreferredPadding"
    android:background="@color/dialog_background">

    <LinearLayout
        android:paddingStart="?android:attr/dialogPreferredPadding"
        android:paddingEnd="?android:attr/dialogPreferredPadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/error"
            android:fontFamily="@font/consolas"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_error"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_text" />

    <TextView
        android:id="@+id/choose"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/choose_other_file"
        android:fontFamily="@font/consolas"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</LinearLayout>