<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?android:attr/dialogPreferredPadding"
    android:background="@color/dialog_background">

    <LinearLayout
        android:paddingStart="?android:attr/dialogPreferredPadding"
        android:paddingEnd="?android:attr/dialogPreferredPadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="30sp"
            android:fontFamily="@font/consolas"
            android:gravity="center"/>

        <TextView
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:fontFamily="@font/consolas"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />

        <LinearLayout
            android:background="@drawable/border"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal"

            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/dialog_text"
                android:backgroundTint="@color/dialog_text"
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:fontFamily="@font/consolas"
                android:importantForAutofill="no"
                android:inputType="none"
                android:hint="@string/name" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/consolas"
                android:text="@string/string"
                android:checked="true"
                android:clickable="false"
                android:buttonTint="@color/unable"
                android:textColor="@color/unable"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/value"
            android:fontFamily="@font/consolas"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_marginBottom="50dp"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <EditText
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dialog_text"
                    android:backgroundTint="@color/dialog_text"
                    android:id="@+id/value"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/consolas"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:hint="@string/value" />

                <CheckBox
                    android:textColor="@color/white"
                    android:buttonTint="@color/blue"
                    android:id="@+id/isString"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/consolas"
                    android:text="@string/string"
                    android:checked="true"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/or"
                    android:textColor="@color/white"
                    android:fontFamily="@font/consolas"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/white" />

            </LinearLayout>

            <RadioGroup
                android:gravity="center"
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">

                <RadioButton
                    android:textColor="@color/white"
                    android:buttonTint="@color/blue"
                    android:id="@+id/array"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/consolas"
                    android:text="@string/array" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="match_parent" />

                <RadioButton
                    android:textColor="@color/white"
                    android:buttonTint="@color/blue"
                    android:id="@+id/object"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/consolas"
                    android:text="@string/object" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:fontFamily="@font/consolas"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dialog_text"/>

        <TextView
            android:id="@+id/done"
            android:background="@drawable/dialog_done_ripple"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/done"
            android:fontFamily="@font/consolas"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>